# rootdata-mcp-server

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  rootdata_api.py  run.py  server.py  setup.py
